--- a/eruptions-solaires.html
+++ b/eruptions-solaires.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Les Éruptions Solaires</title>
+        <meta name="viewport"
+        content="width=device-width,
+        initial-scale=1.0" />
+        <title>Accueil</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/png" href="Shortcut-icon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     </head>
     <body>
-        <header>
-            <a href="index.html" class="logo"><img src="logo.png" alt="logo"></a>
-            <nav>
-                <ul class="nav__links">
-                    <li><a href="trous-noir.html">Les Trous Noirs</a></li>
-                    <li><a href="eruptions-solaires.html">Les Éruptions Solaires</a></li>
+        <nav class="navbar">
+            <div class="navbar__container">
+                <a href="/" id="navbar__logo"><img src="logo.png"></a>
+                <div class="navbar__toggle" id="mobile-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="navbar__menu">
+                    <li class="navbar__item">
+                        <a href="/index.html" class="navbar__links">Accueil</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/trous-noir.html" class="navbar__links">Trous Noirs</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/eruptions-solaires.html" class="navbar__links">Éruption Solaires</a>
+                    </li>
+                    <li class="navbar__btn">
+                        <a href="/sources.html" class="button">Sources</a>
+                    </li>
                 </ul>
-            </nav>
-            <a class="cta" href="index.html"><button>Accueil</button></a>
-        </header>
+            </div>
+        </nav> 
     </body>
 </html>
