--- a/trous-noir.html
+++ b/trous-noir.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
+<html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport"
+        content="width=device-width,
+        initial-scale=1.0" />
         <title>Les Trous Noirs</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/png" href="Shortcut-icon.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     </head>
     <body>
+        <nav class="navbar">
+            <div class="navbar__container">
+                <a href="/" id="navbar__logo"><img src="logo.png"></a>
+                <div class="navbar__toggle" id="mobile-menu">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
+                <ul class="navbar__menu">
+                    <li class="navbar__item">
+                        <a href="/index.html" class="navbar__links">Accueil</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/trous-noir.html" class="navbar__links">Trous Noirs</a>
+                    </li>
+                    <li class="navbar__item">
+                        <a href="/eruptions-solaires.html" class="navbar__links">Éruption Solaires</a>
+                    </li>
+                    <li class="navbar__btn">
+                        <a href="/sources.html" class="button">Sources</a>
+                    </li>
+                </ul>
+            </div>
+        </nav> 
+        <script src="app.js"></script>
+
+        <!-- Services Section -->
+
+        <div class="banner">
+                     <div class="wrapper">
+            <article class="img-info">
+                <h2>Les Trous Noirs...</h2>
+                <p>Les trous noirs sont un phénomène tout à la fois intéressant et épeurant.</p> 
+                <p>Commencons par definir le trou noir, c’est quoi? En gros, c’est des régions qui se situent dans l’espace et le temps et qui exercent une force gravitationnelle qui a tellement de puissance que meme la lumiere qui essaie de passer à travers du trou noir ne peut y échapper. La première personne qui a entamé la discussion sur l’existence de ces régions fut l’anglais John Michell qui les appelait les «étoiles sombres». Plus tard, le terme «trou noir» a été créer par le physicien John Archibald Wheeler. Les trous noirs sont invisibles et ils sont une conséquence de la théorie de la relativité générale d’Albert Einstein. Au début, les trous noirs n’étaient qu’un concept, mais au fil du temps ce concept devient de plus en plus crédible à cause de plusieurs processus astrophysiques qui ont réussi à expliquer la formation des trous noirs et à prédire leurs manifestations observables.</p>
+                <p>Il existe une variété de trous noirs. Il y a les trous noirs stellaires qui sont les plus communs et leur masse se situe à environ 10 à 20 fois celle du Soleil. Par la suite, il y a les trous noirs intermédiaires, les trous noirs miniatures et les trous noirs supermassifs qui eux sont au centre de la plupart des galaxies. La masse de ces trous noirs supermassif est géante et équivaut à des millions et on peut même aller jusqu’à voir des milliards de celle du Soleil. Si vous avez cru que le trou noir stellaire était gigantesque, maintenant vous savez qu’il y a des trous noir plus grand que notre propre système solaire. Les scientifiques ne sont pas encore capables de déterminer le développement de ces régions supermassives, mais selon eux c’est dû à une fusion de plusieurs trous noirs stellaires, mais cela est incertain.</p> 
+                <p>Pour vous donner un exemple de trou noir, nous avons le trou noir M87* qui est au centre de la galaxie Messier 87, qui fait partie d’une des galaxies les plus massives de ce qu’on peut observer de l’univers. Ce trou noir a aussi été le pre mier a être photographier. Un autre exemple serait le trou noir que nous avons au centre de notre propre galaxie, la Voie Lacté, et qui se nomme Sagittarius A*. Il est tellement massif qu’il pèse trois millions de fois notre Soleil! </p> 
+                <p>Maintenant, parlons de l’horizon des événements. C’est la surface externe d’un trou noir et contrairement a ce que l’on peut penser, ce n’est pas une surface solide comme la surface de notre planete, mais c’est une sorte de sphere imaginaire qui est concentrée autour du noyau du trou noir à l’immense attraction gravitationnelle duquel, comme on l’a dis auparavant, s’échapper n’est pas une solution. Quelconque objet qui essaie de s’aventurer dans l’horizon des événements sera soumis à une condamnation d’écrasement et de destruction au centre du trou. La spaghettification est le terme qu’utilise Stephen Hawking pour décrire le futur d’un astronaute qui oserait s’y aventurer. La spaghettification est un effet d’allongement causé par de forts champs gravitationnels sur le corps humain qui lui est fragile. Dans le domaine du trou noir, ce qui cause le plus de questionnement de physique fondamentale non résolues est l’intérieur du trou noir. C’est pas certain si son centre est seulement un point de densité infinie ou toute l’énergie est concentrée, ce qui est appelé la singularité par les mathématiciens, ou si le centre consiste un moyen de transport vers un autre univers hypothétiquement appelé un « trou de ver ».</p> 
+                <p>Pour qu’un trou noir se forme, il se doit qu’une étoile suffisamment massive meurt. À la fin de sa vie, elle s’attire sur elle-même et est capable de résister à cette attraction en brûlant de l’hydrogène. Après un peu de temps, elle finira par vider son réservoir d’hydrogène et implosera en son centre. Par la suite, elle finit par s’effondrer sous son propre poids et son enveloppe est éjectée dans l’espace. L’explosion produit une lumière fascinante et ce phénomène s’appelle une supernova. Au final, il restera seulement le coeur de l’étoile et celui-ci est un trou noir.</p> 
+                <p>La raison pour laquelle le trou noir est appelé ainsi est parce qu’il est en absence de lumière. Mais, si on ne voit pas les trous noirs, comment pouvons-nous les trouver? La méthode la plus simple est d’observer l’effet que le trou noir porte sur la matière à proximité. Pour la plupart des systèmes solaires, il y a une étoile qui s’y trouve dans son centre et autour de celle-là, il y a des planètes qui orbitent. Même après la mort de l’étoile, les planètes continueront leur chemin et vont quand même tourner autour de « rien » et ce rien est justement un trou noir.</p> 
+                <p>Finalement, le théorème de calvitie. Stephen Hawking a collaboré avec Brandon Carter pour essayer de prouver que le trou noir a soit disons pas de cheveux. Cette idée venait de John Archibald Wheeler, mais il a été incapable de la prouvée. Selon lui, le trou noir était seulement défini par sa masse, son moment cinétique et sa charge électrique. Au contraire de Mr. Wheeler, le duo Hawking-Carter ont été capables de prouver qu’il avait bien et belle raison parce que la puissante force gravitationnelle du trou noir élimine tout autre détail. En conséquence, si nous avons deux trous noirs chacun possédant une masse, une charge et un spin identiques, ils seraient indifférenciables selon la physique classique que l’on connaît.</p> 
+            </article>
+            <img class="img-hole" src="miniature-trous-noirs-min.png" alt="logog">
+        </div>
+                </div>
+
        
+
+        
+
     </body>
 </html>
